--- a/costaurant/menus/templates/menus/index.html
+++ b/costaurant/menus/templates/menus/index.html
@@ -13,7 +13,7 @@
     <div id="header">
         <div class="container">
             <div class="nav">
-                <a href="index.html"><img src={% static "menus/images/logo-color.svg" %}>
+                <a href="/menus/"><img src={% static "menus/images/logo-color.svg" %}>
             </div>
             <div class="header_txt">
                 <p>오늘도<b>신선한재료</b>로만든요리</p>
@@ -33,7 +33,7 @@
                   <div class="info">
                     <h3>코딩에 빠진 닭</h3>
                     <p>지금까지 이런 맛은 없었다. 이것은 갈비인가 통닭인가 </p>
-                    <a href="#">메뉴 보기</a>
+                    <a href="food/chicken/">메뉴 보기</a>
                 </div>
            </div>
        </div>
