--- a/costaurant/foods/templates/foods/detail.html
+++ b/costaurant/foods/templates/foods/detail.html
@@ -1,3 +1,6 @@
-<h2>{{name}}</h2> 
+{% load static %}
 
-<a href = "/foods/index"> 돌아가기 </a>
+<h2>{{name}}</h2>
+<div>{{description}}</div>
+<p>{{price}} 원 </p>
+<img src={% get_static_prefix %}{{img_path}}/>
